--- a/public/template/contentBookInput.phtml
+++ b/public/template/contentBookInput.phtml
@@ -1,63 +1,76 @@
-<div class ="container">
-    <div class="row">
-        <div class="col-sm-6">
+<div class ="container" >
 
-            <div class="card">
-                <div class="card-header">
-                    <h4 class="card-title">Lagerbestand</h4>
-                    <h5 class="card-subtitle">Bitte ISBN eingeben</h5>
-                </div>
-                <div class="card-body">
-                    <form action="{{basisUrl}}/eingeben" method="POST">
-                        <div class="form-inline">
-                            <label>ISBN : </label>
-                            <input type="text" name="isbn" class="m-5 form-control" id="inlineFormInputName2" placeholder="ISBN" required pattern="[0-9]{10,13}">
-                        </div>
-                        <div class="form-inline">
-                            <label>Bereich : </label>
-                            <select class="m-2 form-control" name="bereich" id="exampleFormControlSelect1">
-                                [{for $i = 1; $i <= 4; $i++}}
-                                <option>{$i}</option>
-                                {/for}}
-                            </select>
-                            <label>Box : </label>
-                            <select class="m-2 form-control" name="box" id="exampleFormControlSelect1">
-                                {for $i = 1; $i <= 30; $i++}
-                                <option>{$i}</option>
-                                {/for}
-                            </select>
-
-                            <label>Zustand des Buches : </label>
-                            <select class="m-2 form-control" name="zustand" id="exampleFormControlSelect1">
-                                <option>gut</option>
-                                <option>genuegend</option>
-                                <option>schlecht</option>
-                            </select>
-                            <button type="submit" class="m-5 btn btn-primary">Abschicken</button>
-                        </div>
-                    </form>
-                </div>
-                <div class="card-footer">
-                    &nbsp
-                </div>
-
+    <div class="col-sm-6 mx-auto">
+        <div class="card ">
+            <div class="card-header">
+                <h4 class="card-title">{{ModulName}}</h4>
             </div>
-
-
-
-
+            <div class="card-body">
+                <form action="{{basisUrl}}/eingeben" method="POST">
+                    <div class="mt-3 form-inline">
+                        <input type="text" name="ISBN" class="form-control" id="inlineFormInputName2" placeholder="ISBN" required pattern="[0-9]{10,13}">
+                    </div>
+                    <div class="mt-3 form-inline">
+                        <label>Bereich : </label>
+                        <select class="ml-2 form-control" name="bereich" id="exampleFormControlSelect1">
+                            {% for i in range(1, 4) %}
+                            <option>{{i}}</option>
+                            {% endfor %}
+                        </select>
+                        <label class="ml-4">Box : </label>
+                        <select class="ml-2 form-control" name="box" id="exampleFormControlSelect1">
+                            {% for i in range(1, 30) %}
+                            <option>{{i}}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="mt-3 form-inline">
+                        <label>Zustand des Buches : </label>
+                        <select class="ml-2 form-control" name="zustand" id="exampleFormControlSelect1">
+                            <option>gut</option>
+                            <option>genuegend</option>
+                            <option>schlecht</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="btn btn-primary mt-3 mb-3">Abschicken</button>
+                </form>
+            </div>
+            <div class="card-footer">
+                &nbsp;
+            </div>
         </div>
-        <div class="col-sm-6">
-            <!-- Titel bekannt -->
-            {block1 $block1}
-                <div class="col-lg-6" style="height: 500px"><p>Das Buch: {$bookData[0]['title']} wurde in den Bestand aufgenommen</p></div>
-            {/block1 $block1}
-            <!-- wenn Titel unbekannt -->
-            {block2 $block2}
+
+
+
+
+    </div>
+    <div class="col-sm-6 mx-auto mt-4 mb-4">
+        <!-- Titel bekannt -->
+        {% if block1 %}
+        <div class="card">
+            <div class="card-header bg-success">
+                <h4>Erfolgreich</h4>
+            </div>
+            <div class="card-body">
+                <div class="col-lg-6" style="height: 500px"><p>Das Buch: {{title}} wurde in den Bestand aufgenommen</p></div>
+            </div>
+            <div class="card-footer bg-success">&nbsp;
+                &nbsp;
+            </div>
+        </div>
+        {% endif %}
+
+        <!-- wenn Titel unbekannt -->
+        {% if block2 %}
+        <div class="card mx-auto mt-4 mb-4">
+            <div class="card-header bg-danger ">
+                <h4>Metadaten des Buches eingeben</h4>
+            </div>
+            <div class="card-body">
                 <div class="col-lg-offset-6 col-lg-6">
-                    <form action="{basisUrl}/einpflegen" method="POST">
+                    <form action="{{basisUrl}}/einpflegen" method="POST">
                         <div class="form-inline">
-                            <label  class="ml-4 mr-sm-2">ISBN : </label><input name="isbn" type="text" class="m-2 form-control mb-2 mr-sm-2" id="inlineFormInputName2" style="width: 150px" placeholder="ISBN">
+                            <label  class="ml-4 mr-sm-2">ISBN : </label><input name="ISBN" type="text" class="m-2 form-control mb-2 mr-sm-2" id="inlineFormInputName2" style="width: 150px" placeholder="ISBN">
                             <label  class="ml-4 mr-sm-2">Titel : </label><input name="title" type="text" class="m-2 form-control mb-2 mr-sm-2" id="inlineFormInputName2" style="width: 150px" placeholder="Titel">
                         </div>
                         <div class="form-inline">
@@ -66,11 +79,27 @@
                         </div>
                     </form>
                 </div>
-            {/block2 $block2}
-            <!-- Stammdaten Erweiterung erfolgreich -->
-            {block3 $block3}
-                <div class="col-lg-6" style="height: 500px"><p>Die Stammdaten wurden erweitert</p></div>
-            {/block3 $block3}
+            </div>
+            <div class="card-footer bg-danger">
+                &nbsp;
+            </div>
         </div>
+        {% endif %}
+
+        <!-- Stammdaten Erweiterung erfolgreich -->
+        {% if block3 %}
+        <div class="card mx-auto mt-4 mb-4">
+            <div class="card-header bg-success">
+                <h4>Erfolgreich</h4>
+            </div>
+            <div class="card-body">
+                <div class="col-lg-6" style="height: 500px"><p>Die Stammdaten wurden erweitert</p></div>
+            </div>
+            <div class="card-footer bg-success">
+                &nbsp;
+            </div>
+        </div>
+        {% endif %}
     </div>
+
 </div>
